--- a/libtz/libtz.lpi
+++ b/libtz/libtz.lpi
@@ -26,7 +26,7 @@
           </Target>
           <SearchPaths>
             <IncludeFiles Value="$(ProjOutDir)"/>
-            <OtherUnitFiles Value="lib\tz-db;lib\tz-border"/>
+            <OtherUnitFiles Value="obj;lib\tz-db;lib\tz-border"/>
             <UnitOutputDirectory Value="..\dcu\$(TargetCPU)-$(TargetOS)"/>
           </SearchPaths>
           <Parsing>
